frame/support/test/tests/pallet_ui/inherent_check_inner_span.stderr
error[E0046]: not all trait items implemented, missing: `Call`, `Error`, `INHERENT_IDENTIFIER`, `create_inherent`, `is_inherent`
  --> $DIR/inherent_check_inner_span.rs:19:2
   |
19 |     impl<T: Config> ProvideInherent for Pallet<T> {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `Call`, `Error`, `INHERENT_IDENTIFIER`, `create_inherent`, `is_inherent` in implementation
   |
   = help: implement the missing item: `type Call = Type;`
   = help: implement the missing item: `type Error = Type;`
   = help: implement the missing item: `const INHERENT_IDENTIFIER: [u8; 8] = value;`
   = help: implement the missing item: `fn create_inherent(_: &InherentData) -> std::option::Option<<Self as ProvideInherent>::Call> { todo!() }`
   = help: implement the missing item: `fn is_inherent(_: &<Self as ProvideInherent>::Call) -> bool { todo!() }`
